# YouTubeDownload

./: .gitignore  MANIFEST.in  README.md  activate.sh  download_main.py  pyproject.toml  requirements.txt
playlist/: germany_2025.csv  germany_2025.yaml  jia_list.txt  jia_yellowstone_trip.yaml  nba_courts.yaml  songs_list1.yaml  yellowstone_list.txt  yellowstone_trip.yaml
scripts/: generate_songlist.py
src/ytdownloader/: download_youtube_video.py
src/ytdownloader/conf/: config.yaml
src/ytdownloader/conf/playlist/: songs.yaml
