[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube_downloader"
description = "An app to download youtube videos"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pytube", "hydra"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]
version = "0.0.1"

[project.scripts]
ytdownload = "ytdownloader.download_youtube_video:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
