[project]
name = "youtubedownload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josh Lo", email = "jiahsuanlo@yahoo.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.0",
    "pytubefix>=9.2.2",
    "tqdm>=4.67.1",
]

[project.scripts]
ytdownload = "ytdownloader.download_youtube_video:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
